# QuickEd

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_and_test.yaml  publish_release_binaries.yaml  python_wheels.yaml
bindings/: CMakeLists.txt
bindings/cpp/: quicked.cpp  quicked.hpp
bindings/python/: README.md  __init__.py  quicked.cpp  quicked.pyi
examples/: CMakeLists.txt  banded.c  banded_score.c  basic.c  hirschberg.c  windowed.c  windowed_score.c
examples/bindings/: align_benchmark.py  basic.py
quicked/: CMakeLists.txt
quicked/include/: bpm_commons.h
quicked/src/: bpm_banded.c  bpm_neon_banded.c  bpm_windowed.c
quicked_utils/include/: _getopt.h  commons.h  getopt.h  mm_allocator.h  profiler_timer.h
quicked_utils/src/: cigar.c  commons.c  dna_text.c  getopt.c  mm_allocator.c  profiler_counter.c  profiler_timer.c  sequence_buffer.c  vector.c
tests/: CMakeLists.txt  quicked_harness.c
tools/: CMakeLists.txt
tools/align_benchmark/: align_benchmark.c
tools/align_benchmark/benchmark/: benchmark_edit.c
tools/align_benchmark/edit/: edit_bpm.c
tools/generate_dataset/: generate_dataset.c
